# cerberus

./: .gitignore  CMakeLists.txt  run.ops  test.ops
models/box/: model.sdf
models/robot_link_box/: model.config  model.sdf
models/robot_link_box_0/: model.config  model.sdf
models/robot_link_box_1/: model.config  model.sdf
models/robot_link_box_2/: model.config  model.sdf
models/robot_link_box_3/: model.config  model.sdf
models/robot_link_box_4/: model.config  model.sdf
models/robot_link_box_5/: model.config  model.sdf
models/robot_link_box_6/: model.config  model.sdf
src/: Mesh.cpp  Mesh.hpp  RobotCollisionDetection.cpp  RobotCollisionDetection.hpp  RobotDescription.cpp  RobotDescription.hpp  TemplateComponent.cpp  TemplateComponent.hpp  check_kdl_parser.cpp  conversions.cpp  conversions.h  math_utils.h
